Change http response status code that is without body to 204 (No Content), add middleware unit tests, add more test cases, refactor
